# torrent_suit

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  action.sh  action_post.sh  action_pre.sh  build_by_conan.sh  build_deps.md  build_libtorrent.sh  centos_Dockerfile  conanfile.txt  config_agent.cmake  config_test.cmake  config_tracker.cmake  deps.cmake  include_local.sh  includes.sh  mac.cmake  old.travis.yml  proto_gen.sh
.docker/: Dockerfile  centos_Dockerfile  opensuse_Dockerfile
.github/workflows/: ccpp.yml  docker.yml  main.yml
bbts-agent/: CMakeLists.txt  bbts_agent.cpp  bbts_client.cpp  bbts_client.h  bbts_stat.cpp  bbts_stat.h  bt_info.cpp  bt_info.hpp  cluster_api.cpp  cluster_api.h  config.cpp  config.h  consistent_hash_ring.hpp  encode.cpp  encode.h  error_category.cpp  error_category.h  exit_code.hpp  file.cpp  file.h  gko3.cpp  header.cpp  header.h  help.cpp  help.h  lazy_singleton.hpp  log.cpp  log.h  options_parse.cpp  options_parse.h  path.cpp  path.h  pbconf.hpp  peer_source_request_failed_alert.cpp  peer_source_request_failed_alert.h  peer_stat_alert.cpp  peer_stat_alert.h  peer_stat_file.cpp  peer_stat_file.h  plugin.h  (+37 more)
bbts-agent/agent/: agent_main.cpp  task.cpp  task.h  task_db.cpp  task_db.h  task_manager.cpp  task_manager.h
bbts-agent/cmd/: bbts_agent.cpp  bbts_agent.h  process_add.cpp  process_add.h  process_batch_ctrl.cpp  process_batch_ctrl.h  process_download.cpp  process_download.h  process_dump.cpp  process_dump.h  process_getopt.cpp  process_getopt.h  process_list.cpp  process_list.h  process_mkseed.cpp  process_mkseed.h  process_rmfiles.cpp  process_rmfiles.h  process_serve.cpp  process_serve.h  process_setopt.cpp  process_setopt.h  process_status.cpp  process_status.h
bbts-agent/main/: agent_main.cpp  client_main.cpp
bbts-agent/proto/: TorrentProvider.thrift
bbts-agent/tool/: bbts_client.cpp  bbts_client.h  client_main.cpp  cluster_downloader.cpp  cluster_downloader.h  control_server.cpp  control_server.h  disk_allocate_thread.cpp  disk_allocate_thread.h  downloader.cpp  downloader.h  resume.cpp  resume.h
bbts-agent/torrent_plugins/: peer_stat_plugin.cpp  peer_stat_plugin.h  piece_hash_peer_plugin.cpp  piece_hash_peer_plugin.h  source_peer_plugin.cpp  source_peer_plugin.h  torrent_piece_hash_plugin.cpp  torrent_piece_hash_plugin.h  torrent_plugin.cpp  torrent_plugin.h  torrent_source_plugin.cpp  torrent_source_plugin.h  torrent_stat_plugin.cpp  torrent_stat_plugin.h
bbts-tracker/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  KeyTypeRWLock.hpp  LazySingleton.hpp  RWTypeLock.hpp  Random.h  RedisCommandCreator.h  RedisManager.cpp  RedisManager.h  StatusManager.cpp  StatusManager.h  ThreadSingleton.hpp  TypeLock.hpp  encode.cpp  encode.h  hash_crc32.cpp  hash_crc32.h  main.cpp  thrift_serializer.h
bbts-tracker/proto/: tracker_conf.proto  tracker_log.proto
bbts-tracker/tracker/: AnnounceHandler.cpp  AnnounceHandler.h  CommonConf.h  InfoHashGarbageCleaner.cpp  InfoHashGarbageCleaner.h  PeerHandler.cpp  PeerHandler.h  PeerInfo.cpp  PeerInfo.h  RemotePeersSyncronizer.cpp  RemotePeersSyncronizer.h  TrackerErrorCategory.cpp  TrackerErrorCategory.h
clientmock/: CMakeLists.txt  ControlByInfohash.cpp  client_mock.cpp  client_mock_infohash.cpp  client_mock_s.cpp
common/: CMakeLists.txt  LazySingleton.hpp  TypeLock.hpp  com_log.cpp  com_log.h  encode.cpp  log.cpp  log.h
conf/: agent.conf  agent_log.conf  blog.conf  download.conf  log.conf  tracker.conf  tracker_log.conf
demo/: CMakeLists.txt  main.cpp  opt_demo.cpp  uri_agent_demo.cpp
docs/: 1_suite.md
file_utils/: CMakeLists.txt  file_is_locked.cpp
libtorrent-rasterbar-1.0.0/: CMakeLists.txt  Makefile.in  configure  configure.ac  libtorrent-rasterbar-cmake.pc  libtorrent-rasterbar.pc
libtorrent-rasterbar-1.0.0/bindings/python/: Makefile.in  compile_flags  link_flags
libtorrent-rasterbar-1.0.0/examples/: Makefile.in
libtorrent-rasterbar-1.0.0/include/libtorrent/: add_torrent_params.hpp  config.hpp  create_torrent.hpp  file.hpp  file_storage.hpp  policy.hpp  session.hpp  session_settings.hpp  torrent.hpp  torrent_handle.hpp  torrent_info.hpp
libtorrent-rasterbar-1.0.0/src/: Makefile.in  create_torrent.cpp  enum_net.cpp  file.cpp  file_storage.cpp  metadata_transfer.cpp  peer_connection.cpp  policy.cpp  session.cpp  session_impl.cpp  torrent.cpp  torrent_handle.cpp  torrent_info.cpp
libtorrent-rasterbar-1.0.0/test/: Makefile.in
libtorrent-rasterbar-1.0.0/tools/: Makefile.in
libtorrent_0_16_5/: CMakeLists.txt  Jamfile  configure.ac
libtorrent_0_16_5/include/libtorrent/: add_torrent_params.hpp  alert_types.hpp  bandwidth_socket.hpp  create_torrent.hpp  error_code.hpp  file.hpp  file_storage.hpp  i2p_stream.hpp  peer_connection.hpp  policy.hpp  (+9 more)
libtorrent_0_16_5/src/: alert.cpp  bandwidth_limit.cpp  bandwidth_manager.cpp  create_torrent.cpp  entry.cpp  enum_net.cpp  error_code.cpp  file.cpp  file_storage.cpp  i2p_stream.cpp  metadata_transfer.cpp  peer_connection.cpp  policy.cpp  session.cpp  session_impl.cpp  socks5_stream.cpp  storage.cpp  torrent.cpp  torrent_handle.cpp  torrent_info.cpp  upnp.cpp
minihttpd/: CMakeLists.txt  closure.h  current_thread.cpp  current_thread.h  eventloop.cpp  eventloop.h  minihttpd.cpp  minihttpd.h  path.h  process_info.cpp  process_info.h  process_inspector.cpp  process_inspector.h  scoped_ptr.h  spinlock.h  strutil.h  timestamp.cpp  timestamp.h
pb_config/: CMakeLists.txt  configure.proto  message.proto  redis_conf.proto  routing.proto  tracker_conf.proto  tracker_log.proto
plugin/: CMakeLists.txt  hdfstool.cpp
sqlite/: CMakeLists.txt
test/: CMakeLists.txt  datetime.cpp  glog.cpp  minihttp.cpp
test/tracker/: crc.cpp  datetime.cpp  glog.cpp  log.cpp  minihttp.cpp  options.cpp  tracker_test_main.cpp
tracker-protocol/: CMakeLists.txt
uri/: CMakeLists.txt  cache_manager.cpp  cache_manager.h  disk_manager.cpp  disk_manager.h  io.hpp  main.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  torrent_generator.cpp  torrent_generator.h  uri_agent.hpp  uri_agent_demo.cpp  uri_piece_request.h
(+3 files in other folders)
